<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".nav.UpdateEmployeeActivity">

    <Spinner
        android:id="@+id/sprEmployee"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@id/sprEmployee">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clForm"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@id/etFirstName" />

            <EditText
                android:id="@+id/etStreetAddress"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/street_address"
                android:inputType="textPostalAddress"
                app:layout_constraintTop_toBottomOf="@id/etLastName" />

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/city"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/etStreetAddress" />

            <EditText
                android:id="@+id/etState"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/state"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/etCity" />

            <EditText
                android:id="@+id/etZip"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/zip_code"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/etState" />

            <EditText
                android:id="@+id/etTaxId"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/tax_id"
                android:focusable="false"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/etZip" />

            <EditText
                android:id="@+id/etPosition"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/position"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/etTaxId" />

            <EditText
                android:id="@+id/etDepartment"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:hint="@string/department"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/etPosition" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:onClick="updateEmployee"
        android:text="@string/update_employee"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>