<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".nav.FilterEmployeeActivity">

    <TextView
        android:id="@+id/tvDepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fjalla"
        android:text="@string/department"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sprDepartment"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/tvDepartment" />

    <TextView
        android:id="@+id/tvPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/fjalla"
        android:text="@string/position"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/sprDepartment" />

    <Spinner
        android:id="@+id/sprPosition"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/tvPosition" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/get_employees"
        android:onClick="getEmployees"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>